objects/Opportunity.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <businessProcesses>
        <fullName>Direct Hire Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Candidates submitted to Client</fullName>
        </values>
        <values>
            <fullName>Client Interviews Scheduled</fullName>
        </values>
        <values>
            <fullName>Closed %E2%80%93 Lost %28reason why%29</fullName>
        </values>
        <values>
            <fullName>Closed %E2%80%93 Placed - Won %28start date confirmed%29</fullName>
        </values>
        <values>
            <fullName>Fee Agreement Signed</fullName>
        </values>
        <values>
            <fullName>Final Interviews Scheduled</fullName>
        </values>
        <values>
            <fullName>Offer Accepted</fullName>
        </values>
        <values>
            <fullName>Offer Presented</fullName>
        </values>
        <values>
            <fullName>Qualifying Opportunity</fullName>
        </values>
        <values>
            <fullName>References%2FBackground in Process</fullName>
        </values>
        <values>
            <fullName>Sourcing Candidates</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Contract and Contract to Hire Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Candidates submitted to Client</fullName>
        </values>
        <values>
            <fullName>Client Interviews Scheduled</fullName>
        </values>
        <values>
            <fullName>Closed %E2%80%93 Lost %28reason why%29</fullName>
        </values>
        <values>
            <fullName>Closed - Former Billing Project</fullName>
        </values>
        <values>
            <fullName>Currently Billing</fullName>
        </values>
        <values>
            <fullName>Fee Agreement Signed</fullName>
        </values>
        <values>
            <fullName>Final Interviews Scheduled</fullName>
        </values>
        <values>
            <fullName>Offer Accepted</fullName>
        </values>
        <values>
            <fullName>Offer Presented</fullName>
        </values>
        <values>
            <fullName>Onboarding Completed</fullName>
        </values>
        <values>
            <fullName>Onboarding in Process</fullName>
        </values>
        <values>
            <fullName>Qualifying Opportunity</fullName>
        </values>
        <values>
            <fullName>Sourcing Candidates</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Bonus__c</fullName>
        <inlineHelpText>Is there a bonus?</inlineHelpText>
        <label>Bonus</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Notes</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Stock__c</fullName>
        <inlineHelpText>Stock</inlineHelpText>
        <label>Stock</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>Orange County</fullName>
                </value>
                <value>
                    <fullName>San Diego</fullName>
                </value>
                <value>
                    <fullName>Portland</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>San Antonio</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <inlineHelpText>Upon Conversion, at what salary are you expecting to hire this person at?</inlineHelpText>
        <label>Salary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>B2B Services</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotechnology - Device &amp; Pharma</fullName>
                </value>
                <value>
                    <fullName>Construction &amp; Engineering</fullName>
                </value>
                <value>
                    <fullName>Consumer Products</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Education &amp; Training</fullName>
                </value>
                <value>
                    <fullName>Education Services</fullName>
                </value>
                <value>
                    <fullName>Energy - Utilities</fullName>
                </value>
                <value>
                    <fullName>Entertainment Media</fullName>
                </value>
                <value>
                    <fullName>Private Equity</fullName>
                </value>
                <value>
                    <fullName>Investment Bank</fullName>
                </value>
                <value>
                    <fullName>Law Firm</fullName>
                </value>
                <value>
                    <fullName>CPA Firm</fullName>
                </value>
                <value>
                    <fullName>Private Wealth Firm</fullName>
                </value>
                <value>
                    <fullName>Financial Services &amp; Insurance</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Healthcare - Facilities</fullName>
                </value>
                <value>
                    <fullName>Healthcare - Services/Insurance</fullName>
                </value>
                <value>
                    <fullName>Hospitality &amp; Tourism</fullName>
                </value>
                <value>
                    <fullName>Manufacturing - Consumer Products</fullName>
                </value>
                <value>
                    <fullName>Manufacturing - Industrial Products</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Real Estate - Property Management</fullName>
                </value>
                <value>
                    <fullName>Restaurants</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Grocery</fullName>
                </value>
                <value>
                    <fullName>Technology - Hardware</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pay_Rate__c</fullName>
        <label>Pay Rate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Rate__c</fullName>
        <label>Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dress_code__c</fullName>
        <inlineHelpText>Dress code</inlineHelpText>
        <label>Dress code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employment__c</fullName>
        <label>Employment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>W2 Exempt</fullName>
                </value>
                <value>
                    <fullName>W2 Non-Exempt</fullName>
                </value>
                <value>
                    <fullName>1099</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Amount__c</fullName>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bonus_Terms__c</fullName>
        <label>Bonus Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DT_Pay_Rate__c</fullName>
        <label>DT  Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fulfillment__c</fullName>
        <label>Fulfillment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interview_1__c</fullName>
        <inlineHelpText>Can you describe the interview process</inlineHelpText>
        <label>Interview 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interview_2__c</fullName>
        <inlineHelpText>Can you describe the interview process</inlineHelpText>
        <label>Interview 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interview_3__c</fullName>
        <inlineHelpText>Can you describe the interview process</inlineHelpText>
        <label>Interview 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OT_Pay_Rate__c</fullName>
        <label>OT Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Lost__c</fullName>
        <label>Reason Lost</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competition</fullName>
                </value>
                <value>
                    <fullName>Lost on Price</fullName>
                </value>
                <value>
                    <fullName>Opportunity Canceled</fullName>
                </value>
                <value>
                    <fullName>Internal Resource</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_Level__c</fullName>
        <label>Title Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting Director</fullName>
                </value>
                <value>
                    <fullName>Accounting Manager</fullName>
                </value>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable Manager</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable Director</fullName>
                </value>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>Chief Accounting Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Operations Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Data Scientist</fullName>
                </value>
                <value>
                    <fullName>Chief Digital Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Information Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Technology Officer</fullName>
                </value>
                <value>
                    <fullName>Controller</fullName>
                </value>
                <value>
                    <fullName>Data Scientist</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Finance Director</fullName>
                </value>
                <value>
                    <fullName>Finance Manager</fullName>
                </value>
                <value>
                    <fullName>Finance Systems Implementation</fullName>
                </value>
                <value>
                    <fullName>Financial Reporting VP</fullName>
                </value>
                <value>
                    <fullName>Internal Audit Director</fullName>
                </value>
                <value>
                    <fullName>Internal Audit Manager</fullName>
                </value>
                <value>
                    <fullName>Internal Auditor</fullName>
                </value>
                <value>
                    <fullName>Investor Relations</fullName>
                </value>
                <value>
                    <fullName>Mergers &amp; Acquisitions</fullName>
                </value>
                <value>
                    <fullName>Payroll Analyst</fullName>
                </value>
                <value>
                    <fullName>Payroll Manager</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Recruiter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPA_Required__c</fullName>
        <label>CPA Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DT_Bill_Rate__c</fullName>
        <label>DT Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FourZeroOneK__c</fullName>
        <inlineHelpText>401K</inlineHelpText>
        <label>401K</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MBA_Required__c</fullName>
        <label>MBA Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OT_Bill_Rate__c</fullName>
        <label>OT Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pay_Rate_Low__c</fullName>
        <label>Pay Rate Low</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referral_Fee__c</fullName>
        <label>Referral Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refund_Terms__c</fullName>
        <label>Refund Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Base_Comp_Low__c</fullName>
        <label>Base Comp Low</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Terms__c</fullName>
        <label>Invoice Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pay_Rate_High__c</fullName>
        <label>Pay Rate High</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Position_City__c</fullName>
        <label>Position City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Name__c</fullName>
        <label>Position Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Type__c</fullName>
        <label>Position Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Contract To Hire</fullName>
                </value>
                <value>
                    <fullName>Direct Hire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Index__c</fullName>
        <label>Pricing Index</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Senior Accountant / Senior Financial Analyst:  $100 - $125/hr</fullName>
                </value>
                <value>
                    <fullName>Accounting / Finance Manager / PM:  $125 - $150/hr</fullName>
                </value>
                <value>
                    <fullName>Accounting / Finance Director / Controller / PM:  $150/hr - $175/hr</fullName>
                </value>
                <value>
                    <fullName>Technical / SEC Accounting Manager:  $150 - $175/hr</fullName>
                </value>
                <value>
                    <fullName>Technical / SEC Accounting Director:  $175 - $200/hr</fullName>
                </value>
                <value>
                    <fullName>VP Accounting / Finance / Controller:  $175 - $200/hr</fullName>
                </value>
                <value>
                    <fullName>CFO:  $200/hr - $300/hr</fullName>
                </value>
                <value>
                    <fullName>Management Consultant Advisory:  $200/hr - $300/hr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Comp_High__c</fullName>
        <label>Base Comp High</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Benefits_Perks__c</fullName>
        <label>Benefits/Perks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bonus_Accepted__c</fullName>
        <label>Bonus (Accepted)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Person_Sourced__c</fullName>
        <label>Person Sourced</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Patrick Coggins</fullName>
                </value>
                <value>
                    <fullName>Rahul Merani</fullName>
                </value>
                <value>
                    <fullName>Lajja Shah</fullName>
                </value>
                <value>
                    <fullName>Jinu Philip</fullName>
                </value>
                <value>
                    <fullName>Tom Jacob</fullName>
                </value>
                <value>
                    <fullName>Sreepriya Sundaresan</fullName>
                </value>
                <value>
                    <fullName>Tracey Laubsted</fullName>
                </value>
                <value>
                    <fullName>External Referral</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Deidre Holguin</fullName>
                    <isActive>false</isActive>
                    <label>Deidre Holguin</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position_State__c</fullName>
        <label>Position State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Title__c</fullName>
        <label>Position Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Sourced__c</fullName>
        <label>Channel Sourced</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Person Meeting</fullName>
                </value>
                <value>
                    <fullName>Phone Meeting</fullName>
                </value>
                <value>
                    <fullName>Inbound Call</fullName>
                </value>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Linked In</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Networking Event</fullName>
                </value>
                <value>
                    <fullName>BOD Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Financial Planning &amp; Analysis</fullName>
                </value>
                <value>
                    <fullName>Financial Reporting</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence/Financial Systems</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Mergers &amp; Acquisitions</fullName>
                </value>
                <value>
                    <fullName>Investor Relations</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Recruiting &amp; Sales</fullName>
                </value>
                <value>
                    <fullName>Royalties</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Skills__c</fullName>
        <label>Position Skills</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Position_Status__c</fullName>
        <label>Position Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Position</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Open - Approved</fullName>
                </value>
                <value>
                    <fullName>Closed - Filled</fullName>
                </value>
                <value>
                    <fullName>Closed - Not Approved</fullName>
                </value>
                <value>
                    <fullName>Closed - Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Bill_Rate__c</fullName>
        <label>Quote Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <label>Referral Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_Skills__c</fullName>
        <label>Software Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adaptive Planning</fullName>
                </value>
                <value>
                    <fullName>Adaptive Insights</fullName>
                </value>
                <value>
                    <fullName>Anaplan</fullName>
                </value>
                <value>
                    <fullName>Blackline</fullName>
                </value>
                <value>
                    <fullName>BPC</fullName>
                </value>
                <value>
                    <fullName>Cognos</fullName>
                </value>
                <value>
                    <fullName>Epicore</fullName>
                </value>
                <value>
                    <fullName>GreatPlains</fullName>
                </value>
                <value>
                    <fullName>Hadoop</fullName>
                </value>
                <value>
                    <fullName>Host Analytics</fullName>
                </value>
                <value>
                    <fullName>Planful</fullName>
                </value>
                <value>
                    <fullName>Hyperion Financial Management</fullName>
                </value>
                <value>
                    <fullName>Hyperion Essbase</fullName>
                </value>
                <value>
                    <fullName>Intacct</fullName>
                </value>
                <value>
                    <fullName>Lawson</fullName>
                </value>
                <value>
                    <fullName>Microsoft AX Dynamics</fullName>
                </value>
                <value>
                    <fullName>Dynamics 365</fullName>
                </value>
                <value>
                    <fullName>Navision</fullName>
                </value>
                <value>
                    <fullName>NetSuite</fullName>
                </value>
                <value>
                    <fullName>Oracle R12</fullName>
                </value>
                <value>
                    <fullName>Oracle Fusion</fullName>
                </value>
                <value>
                    <fullName>Oracle PBCS</fullName>
                </value>
                <value>
                    <fullName>JD Edwards</fullName>
                </value>
                <value>
                    <fullName>Peachtree</fullName>
                </value>
                <value>
                    <fullName>Peoplesoft</fullName>
                </value>
                <value>
                    <fullName>PowerBI</fullName>
                </value>
                <value>
                    <fullName>Python</fullName>
                </value>
                <value>
                    <fullName>QAD</fullName>
                </value>
                <value>
                    <fullName>Quickbooks</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <inlineHelpText>Is travel required for the role?  If so, how often and to where?</inlineHelpText>
        <label>Travel Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Bonus__c</fullName>
        <inlineHelpText>Completion Bonus?  Hourly or flat (subtracts further from pay rate) – manual entry</inlineHelpText>
        <label>Completion Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Invoice_To__c</fullName>
        <label>Email Invoice To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Quote_Search_Fee__c</fullName>
        <inlineHelpText>Quote Search Fee</inlineHelpText>
        <label>Quote Search Fee</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Management__c</fullName>
        <label>Client Management</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Makeup__c</fullName>
        <inlineHelpText>Can you describe the make-up of the department?</inlineHelpText>
        <label>Department Make-up</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distribution_List__c</fullName>
        <label>Distribution List</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Patrick</fullName>
                </value>
                <value>
                    <fullName>Rahul</fullName>
                </value>
                <value>
                    <fullName>Dee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needs_to_weigh_in__c</fullName>
        <inlineHelpText>Is there anyone else that needs to weigh in prior to extending an offer?</inlineHelpText>
        <label>Needs to weigh in</label>
        <type>TextArea</type>
    </fields>
</CustomObject>